[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyflue"
version = "0.1.0"
description = "Python-first agent harness framework with Markdown skills, sessions, sandboxes, and pluggable backends."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Superagentic AI", email = "hello@super-agentic.ai" },
  { name = "Shashi Jagtap", email = "shashikant.jagtap@icloud.com" },
  { name = "Shashi Jagtap", email = "shashi@super-agentic.ai" },
]
maintainers = [
  { name = "Superagentic AI", email = "hello@super-agentic.ai" },
]
keywords = [
  "agents",
  "agent-harness",
  "ai-agents",
  "autonomous-agents",
  "deepagents",
  "pydantic",
  "markdown",
  "sandbox",
  "skills",
  "agent-framework",
  "python-agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "aiosqlite>=0.21.0",
  "deepagents>=0.5.6,<0.6.0",
  "pydantic>=2.12.2,<3",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.2,<7",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "watchdog>=6,<7",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.15.1,<0.16.0", "openai>=2.26.0,<3"]
google = ["google-adk>=1.32.0,<1.33.0", "google-genai>=1.72,<2"]
pydanticai = [
  "pydantic-ai>=1.89.1,<1.90.0",
  "pydantic-ai-harness[code-mode]",
  "pydantic-ai-slim>=1.89.1,<1.90.0",
]
dev = ["pytest>=9,<10", "pytest-asyncio>=1.3.0", "ruff>=0.14"]
docs = [
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.6.0,<10",
  "pymdown-extensions>=10.14,<11",
]

[project.scripts]
pyflue = "pyflue.cli:app"

[project.urls]
Homepage = "https://github.com/SuperagenticAI/pyflue"
Documentation = "https://superagenticai.github.io/pyflue/"
Repository = "https://github.com/SuperagenticAI/pyflue"
Issues = "https://github.com/SuperagenticAI/pyflue/issues"
Source = "https://github.com/SuperagenticAI/pyflue"

[tool.hatch.build.targets.wheel]
packages = ["pyflue"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
